--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     buildToolsVersion "26.0.2"
+    flavorDimensions "default"
     defaultConfig {
         applicationId "com.padhuga.tamil"
         minSdkVersion 19
@@ -39,18 +40,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
-    compile 'com.android.support:support-v4:27.0.2'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.google.firebase:firebase-ads:11.2.0'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.github.QuadFlask:colorpicker:0.0.13'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.google.firebase:firebase-ads:11.8.0'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
+    testImplementation 'junit:junit:4.12'
 }
 
 
