--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/tamil_backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/tamil_mother"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/tamil_mother"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
