--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         applicationId "com.padhuga.tamil"
+        resConfigs "en"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -89,6 +90,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.prod
         }
