--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,52 +1,26 @@
 apply plugin: 'com.android.application'
 
 static def getAppVersionCode() {
-    def versionCode = System.getenv('VERSION_CODE')
-    if (versionCode != null) {
-        return versionCode
-    }
     return '0'
 }
 
 static def getAppVersionNumber(appName) {
-    def versionNumber = System.getenv('VERSION_NUMBER')
-    if (versionNumber != null) {
-        return versionNumber
-    }
     return appName + '1.' + getAppVersionCode()
 }
 
-def getEnvironmentKeystorePath() {
-    def keystoreName = System.getenv('KEYSTORE_NAME')
-    def workspacePath = System.getenv('WORKSPACE')
-    if (keystoreName != null && workspacePath != null) {
-        println(file(file(workspacePath).getParent()).getParent() + "/" + keystoreName)
-        return file(file(workspacePath).getParent()) + "/" + keystoreName
-    }
+static def getEnvironmentKeystorePath() {
     return '../Tamil-signingkey'
 }
 
 static def getEnvironmentKeystoreAlias() {
-    def keystoreAlias = System.getenv('KEYSTORE_ALIAS')
-    if (keystoreAlias != null) {
-        return keystoreAlias
-    }
     return 'Tamil'
 }
 
 static def getEnvironmentKeystorePassword() {
-    def keystorePassword = System.getenv('KEYSTORE_PASSWORD')
-    if (keystorePassword != null) {
-        return keystorePassword
-    }
     return 'Padhuga@555'
 }
 
 static def getEnvironmentKeystoreKeyPassword() {
-    def keystoreKeyPassword = System.getenv('KEYSTORE_KEY_PASSWORD')
-    if (keystoreKeyPassword != null) {
-        return keystoreKeyPassword
-    }
     return 'Padhuga@555'
 }
 
@@ -88,10 +62,19 @@ android {
             v2SigningEnabled false
         }
     }
+
+    /*   splits {
+       abi {
+           enable true
+           reset()
+           include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips'
+           universalApk false
+       }
+   }*/
+
     buildTypes {
         release {
             minifyEnabled true
-            debuggable true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.prod
@@ -143,7 +126,6 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.google.firebase:firebase-ads:11.8.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
