--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ play {
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "27.0.3"
     setTestBuildType('debug')
     flavorDimensions "default"
     defaultConfig {
@@ -127,13 +127,14 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.google.firebase:firebase-ads:11.8.0'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.google.firebase:firebase-ads:15.0.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 }
 
 
